k8s/kube-system/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`traefik.ops.netsoc.ie`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: auth
  tls:
    secretName: tls-ops
    domains:
    - main: '*.ops.netsoc.ie'
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-ops-users
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: kube-system
spec:
  redirectRegex:
    regex: '^https://traefik.ops.netsoc.ie/(.*)'
    replacement: 'https://traefik.ops.netsoc.ie/dashboard/${1}'
    permanent: true
